# manufacturing-monitor-ai-handson

./: .cspell.json  .gitignore  .prettierignore  .textlintignore  .textlintrc.json  README.md  SETUP.claude.md  SETUP.kiro.md  SETUP.md  package.json  pnpm-lock.yaml  turbo.json
.claude/rules/ch3/: spec.md
.claude/rules/ch3-skill-creator/: spec.md
.claude/rules/ch4/: spec.md
.claude/skills/sync-chapters/: SKILL.md
.github/workflows/: setup-validation.yml
ch1/: README.claude.md  README.kiro.md  README.md  pyproject.toml
ch2/: README.claude.md  README.md  pyproject.toml
ch3/: README.md
ch3-playwright/: README.claude.md  README.kiro.md  sample_data.xlsx
ch3-skill-creator/: .npmrc  README.claude.md  README.kiro.md  package.json  pnpm-lock.yaml  pyproject.toml
ch3-skill-creator/db/: connection.py
ch3-skill-creator/tests/: test_seed.py
ch3/data/: factory.db
ch4/: README.claude.md  README.kiro.md  README.md
ch5/: README.claude.md  README.md
ch5_fin/: README.md  app.py  pyproject.toml
ch5_fin/tests/: test_seed.py
claude-code/: README.md  SETUP.md
claude-code/ch1/: README.md
claude-code/ch2/: README.md
claude-code/ch3-playwright/: README.md
claude-code/ch3-skill-creator/: README.md
claude-code/ch3-skill-creator/db/: schema.sql
claude-code/ch4/: README.md  app.py  pyproject.toml
claude-code/ch4/tests/: test_app.py
claude-code/ch5/: README.md  pyproject.toml
kiro/: README.md  SETUP.md
kiro/ch1/: README.md
kiro/ch2/: README.md
kiro/ch2/db/: seed.py
kiro/ch3/: README.md  pyproject.toml
kiro/ch4/: README.md
kiro/ch5/: app.py
tools/: pyproject.toml
tools/ch1/: create_sample_excel.py
(+46 files in other folders)
