[project]
name = "ch3"
version = "0.1.0"
description = "ch3: Agent Skills - skill-creatorによるスキル開発"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.45.0",
    "pandas>=2.2.0",
    "plotly>=6.0.0",
    "openpyxl>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
